# chromhandler-example

./: .gitignore  1-calibration.ipynb  2-kinetic.ipynb  3-model.ipynb  README.md  pyproject.toml
data/: enzymeml.json
data/hplc/: init_conditions.csv
data/hplc/calibration/adenine/: CA13_800uM.json  CA14_400uM.json  CA15_200uM.json  CA16_100uM.json  CA17_50uM.json  CA18_25uM.json
data/hplc/calibration/adenosine/: CA1_800uM.json  CA2_400uM.json  CA3_200uM.json  CA4_100uM.json  CA5_50uM.json  CA6_25uM.json
data/hplc/kinetics/CF10/: CF10_0min.json  CF10_10min.json  CF10_120min.json  CF10_20min.json  CF10_240min.json  CF10_30min.json  CF10_60min.json
data/hplc/kinetics/CF6/: CF6_0min.json  CF6_10min.json  CF6_120min.json  CF6_20min.json  CF6_240min.json  CF6_30min.json  CF6_60min.json
data/hplc/kinetics/CF7/: CF7_0min.json  CF7_10min.json  CF7_120min.json  CF7_20min.json  CF7_240min.json  CF7_30min.json  CF7_60min.json
data/hplc/kinetics/CF8/: CF8_0min.json  CF8_10min.json  CF8_120min.json  CF8_20min.json  CF8_240min.json  CF8_30min.json  CF8_60min.json
data/hplc/kinetics/CF9/: CF9_0min.json  CF9_10min.json  CF9_120min.json  CF9_20min.json  CF9_240min.json  CF9_30min.json  CF9_60min.json
data/molecules/: adenine.json  adenosine.json
data/proteins/: SAHH.json
scripts/: colab.py
