[project]
name = "chromhandler-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catalax",
    "chromhandler>=0.10.2",
    "ipykernel>=6.30.1",
]

[tool.uv.sources]
catalax = { git = "https://github.com/JR-1991/Catalax", rev = "master" }
